@@ -212,6 +212,8 @@ MW_OPTIONSMENU_TEAM=\u00c9q&uipe...
 
 MW_OPTIONSMENU_EXT_TMX=TM&X externes...
 
+MW_OPTIONSMENU_VIEW=Afficha&ge...
+
 MW_OPTIONSMENU_SENTSEG=&Segmentation...
 
 TF_OPTIONSMENU_MACHINETRANSLATE=Tra&duction automatique
@@ -1110,6 +1112,11 @@ EXT_TMX_TITLE=Options des TMX externes
 EXT_TMX_DESCRIPTION=S\u00e9lectionnez la fa\u00e7on dont les balises des TMX non produites par OmegaT doivent \u00eatre affich\u00e9es.
 EXT_TMX_SHOW_LEVEL2=A&fficher les balises
 EXT_TMX_USE_XML=Utiliser &XML pour les balises isol\u00e9es (ex: <i/>)
+
+# org.omegat.gui.dialogs.ViewOptions.java
+VIEW_OPTION_TITLE=Options d'affichage
+VIEW_OPTION_SOURCE=Afficher tous les segments &source en gras
+VIEW_OPTION_UNIQUE=Marquer le premier segment non &unique
 
 # org.omegat.gui.dialogs.TagValidationOptionsDialog
 
