@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.2.1
 ----------------------------------------------------------------------
-  8 Enhancements
+  9 Enhancements
   3 Bugfixes
 ----------------------------------------------------------------------
 2.2.1 vs. 2.2.0 update 4
@@ -22,9 +22,13 @@
   - Japanese localisation updated to 2.2.0 (UI)
   - Belarusian localisation updated to 2.1.0 (UI)
 
-  - The Open MXL Word option "Hidden Text" as been renamed to
+  - The Open XML Word option "Hidden Text" as been renamed to
 "Non-visible Instruction Text" to avoid confusion with the "Hidden effect"
 or "Hidden attribute" in Word.
+
+  - When Display Source Segments is used, a new option (Options > View)
+allows to set whether all source segments are bold (as previously), or
+only the current one.
 
   Bug fixes:
 
